web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-decorators/output.txt
[SyntaxError]: Decorators can't be used with a static block. (3,3)
3|  @dec
 | ^
